[gd_scene load_steps=35 format=2]

[ext_resource path="res://Fotos/BackButton.png" type="Texture" id=1]
[ext_resource path="res://UI/AdminArea/FileDialog.gd" type="Script" id=2]
[ext_resource path="res://SceneLoader/SceneLoader.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/buttonFontCards.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fotos/SmallerConfirmButtonDisabled.png" type="Texture" id=5]
[ext_resource path="res://Fotos/enterButton_pressed.png" type="Texture" id=6]
[ext_resource path="res://UI/UISoundManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fotos/EnterButton.png" type="Texture" id=8]
[ext_resource path="res://UI/AdminArea/UploadCard.gd" type="Script" id=9]
[ext_resource path="res://UI/AdminArea/BackButton.gd" type="Script" id=10]
[ext_resource path="res://UI/AdminArea/SelectImage.gd" type="Script" id=11]
[ext_resource path="res://Assets/Fonts/Roboto_greek/Roboto-Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Fotos/image_gallery.png" type="Texture" id=13]
[ext_resource path="res://Fotos/dropdown_menu_arrow.png" type="Texture" id=14]
[ext_resource path="res://Fonts/greekFont.tres" type="DynamicFont" id=16]
[ext_resource path="res://Fotos/BackButtonSelected.png" type="Texture" id=17]
[ext_resource path="res://Languages/TranslationManager.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.894118, 0.388235, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="Theme" id=6]
default_font = ExtResource( 16 )
Dialogs/constants/button_margin = 32
Dialogs/constants/margin = 8
OptionButton/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
OptionButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
OptionButton/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = SubResource( 3 )
OptionButton/styles/focus = SubResource( 3 )
OptionButton/styles/hover = SubResource( 3 )
OptionButton/styles/normal = SubResource( 3 )
OptionButton/styles/pressed = SubResource( 3 )
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 4 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 5 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.901961, 0.435294, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.945098, 0.631373, 0.427451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.901961, 0.435294, 0.12549, 1 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 30
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.894118, 0.388235, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.780392, 0.737255, 0.737255, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 30
extra_spacing_char = 2
font_data = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=17]
size = 25
outline_size = 1
outline_color = Color( 0.6, 0.45098, 0.364706, 1 )
extra_spacing_char = 2
font_data = SubResource( 16 )

[node name="UploadCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -355.885, -61.6462 )
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [ 585.95 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -6.25492 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.00162137
anchor_right = 0.998379
anchor_bottom = 1.0
margin_top = 1.02008
margin_bottom = 1.02008
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 2
color = Color( 0.945098, 0.631373, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/ColorRect2"]
anchor_right = 1.0
margin_bottom = 50.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ColorRect/VBoxContainer/ColorRect2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
previousScene = "res://UI/AdminArea/CardManager.tscn"
previousEditScene = "res://UI/AdminArea/CardMenuZones.tscn"
mainNode = NodePath("../../../../..")

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/ColorRect2/HBoxContainer"]
margin_left = 337.0
margin_top = 7.0
margin_right = 752.0
margin_bottom = 43.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Uploading a challenge card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ColorRect/VBoxContainer"]
margin_left = 12.0
margin_top = 122.0
margin_right = 1012.0
margin_bottom = 274.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 6
size_flags_vertical = 2
size_flags_stretch_ratio = 4.04
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="ColorRect/VBoxContainer/GridContainer"]
margin_top = 8.0
margin_right = 195.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zone"

[node name="MapZones" type="OptionButton" parent="ColorRect/VBoxContainer/GridContainer"]
margin_left = 199.0
margin_right = 849.0
margin_bottom = 52.0
rect_min_size = Vector2( 650, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
theme = SubResource( 6 )
custom_icons/arrow = ExtResource( 14 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "teste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapZonesAsteric" type="Label" parent="ColorRect/VBoxContainer/GridContainer"]
margin_left = 853.0
margin_top = 7.0
margin_right = 871.0
margin_bottom = 45.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Card File" type="Label" parent="ColorRect/VBoxContainer/GridContainer"]
margin_top = 58.0
margin_right = 195.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Card File"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/VBoxContainer/GridContainer"]
margin_left = 199.0
margin_top = 56.0
margin_right = 849.0
margin_bottom = 96.0

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/GridContainer/HBoxContainer3"]
margin_left = 2.0
margin_right = 107.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 3
size_flags_stretch_ratio = 4.09
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "select "
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
fileManager = NodePath("../../../../../FileDialog")
fileManagerCard = NodePath("../../../../../FileDialogCardFile")

[node name="FilePath" type="Label" parent="ColorRect/VBoxContainer/GridContainer/HBoxContainer3"]
margin_left = 113.0
margin_right = 650.0
margin_bottom = 40.0
mouse_default_cursor_shape = 8
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="FileAsterisc" type="Label" parent="ColorRect/VBoxContainer/GridContainer"]
margin_left = 853.0
margin_top = 57.0
margin_right = 871.0
margin_bottom = 95.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Image" type="Label" parent="ColorRect/VBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 195.0
margin_bottom = 144.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Image (.png)"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer/GridContainer"]
margin_left = 199.0
margin_top = 100.0
margin_right = 849.0
margin_bottom = 152.0

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/GridContainer/HBoxContainer2"]
margin_right = 155.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 3
size_flags_stretch_ratio = 4.09
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "select "
icon = ExtResource( 13 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
fileManager = NodePath("../../../../../FileDialog")
fileManagerCard = NodePath("../../../../../FileDialog")

[node name="ImagePath" type="Label" parent="ColorRect/VBoxContainer/GridContainer/HBoxContainer2"]
margin_left = 159.0
margin_right = 650.0
margin_bottom = 52.0
mouse_default_cursor_shape = 8
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Image_input" type="LineEdit" parent="ColorRect/VBoxContainer/GridContainer"]
visible = false
margin_left = 176.0
margin_top = 146.0
margin_right = 776.0
margin_bottom = 184.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 15 )
max_length = 200
expand_to_text_length = true

[node name="ImageAsterisc" type="Label" parent="ColorRect/VBoxContainer/GridContainer"]
margin_left = 853.0
margin_top = 107.0
margin_right = 871.0
margin_bottom = 145.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="SceneLoader" parent="." instance=ExtResource( 3 )]
next_scene_path = "res://UI/InitialMenuCris/InitialMenu.tscn"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -244.5
margin_right = 493.0
margin_bottom = 244.5
custom_colors/folder_icon_modulate = Color( 1, 1, 1, 1 )
popup_exclusive = true
window_title = "Choose an Image"
resizable = true
dialog_text = "Choose an image for this challenge"
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users"
current_path = "/Users/"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialogCardFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -244.5
margin_right = 493.0
margin_bottom = 244.5
custom_colors/folder_icon_modulate = Color( 1, 1, 1, 1 )
popup_exclusive = true
window_title = "Choose a file"
resizable = true
dialog_text = "Choose a file to upload"
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.tres" )
current_dir = "/Users"
current_path = "/Users/"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asterisco_legenda" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -36.0
margin_right = 189.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "* mandatory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_pivot_offset = Vector2( -980.804, -584.622 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 2
size_flags_stretch_ratio = 2.43
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslationManager" parent="." instance=ExtResource( 18 )]

[node name="UISoundManager" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="ColorRect/VBoxContainer/ColorRect2/HBoxContainer/TextureButton" to="ColorRect/VBoxContainer/ColorRect2/HBoxContainer/TextureButton" method="_on_BackButton_pressed"]
[connection signal="item_focused" from="ColorRect/VBoxContainer/GridContainer/MapZones" to="UISoundManager" method="select"]
[connection signal="item_selected" from="ColorRect/VBoxContainer/GridContainer/MapZones" to="UISoundManager" method="select"]
[connection signal="pressed" from="ColorRect/VBoxContainer/GridContainer/HBoxContainer3/Button" to="ColorRect/VBoxContainer/GridContainer/HBoxContainer3/Button" method="show_fileManager_card"]
[connection signal="pressed" from="ColorRect/VBoxContainer/GridContainer/HBoxContainer2/Button" to="ColorRect/VBoxContainer/GridContainer/HBoxContainer2/Button" method="show_fileManager"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_image_selected"]
[connection signal="file_selected" from="FileDialogCardFile" to="." method="_on_FileDialog_file_selected"]
[connection signal="button_down" from="TextureButton2" to="UISoundManager" method="confirm"]
[connection signal="pressed" from="TextureButton2" to="." method="submit"]
